# DrawSVG

./: .gitignore  CMakeLists.txt  README.md
include/: GraphicScene.h  Map.h  MapJsonLoader.h  SvgRenderer.h  mainwindow.h
src/: CMakeLists.txt  GraphicScene.cpp  Map.cpp  MapJsonLoader.cpp  SvgRenderer.cpp  main.cpp  mainwindow.cpp
ui/: gui.ui
